--- a/_config.yml
+++ b/_config.yml
@@ -11,19 +11,19 @@ safe: true
 
 
 # edit here to achieve your personal greatness
-url: http://username.github.io/
+url: http://charig.github.io/
 baseurl: /sustain/
-title: Chris Turner
-author: Chris Turner
+title: Guido Chari
+author: Guido Chari
 description: Personal blog and resume
-avatar: profile.png
-email: yourname@email.com
-github: jekyller/sustain # username
-twitter: username
-linkedin: username
-stackoverflow: username   #e.g: users/2735833/proton1h1
+avatar: profile.jpg
+email: gchari@dc.uba.ar
+github: charig # username
+twitter: GuidoChari
+linkedin: guido-chari-87981083
+#stackoverflow: username   #e.g: users/2735833/proton1h1
 #Comment out if you don't want disqus
-disqus: username
+#disqus: username
 google_analytics: UA-69391421-1
 
 
